kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-client
  namespace: codebras
  labels:
    app: playlist-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: playlist-client
  template:
    metadata:
      labels:
        app: playlist-client
    spec:
      containers:
      - name: client
        image: codebras/playlistclient:latest
        ports:
        - containerPort: 80
