kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-server
  namespace: codebras
  labels:
    app: playlist-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playlist-server
  template:
    metadata:
      labels:
        app: playlist-server
    spec:
      containers:
      - name: server
        image: codebras/playlistserver:${TAG_ID}
        ports:
        - containerPort: 8080
