kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playlist-db
  namespace: codebras
spec:
  selector:
    app: playlist-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
