kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playlist-server
  namespace: codebras
spec:
  selector:
    app: playlist-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
