kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playlist-ingress
  namespace: codebras
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Ensure cert-manager is set up for Let's Encrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - projectplaylist.duckdns.org # Frontend Client
    - api.projectplaylist.duckdns.org # Backend Server
    secretName: playlist-tls
  rules:
  - host: projectplaylist.duckdns.org # Main domain for the client
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playlist-client
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: playlist-server
            port:
              number: 8080
